deploy/configs/envoy-config.yaml
static_resources:
  listeners:
  - name: listener_0
    address:
      socket_address: { address: 0.0.0.0, port_value: 80 }
    filter_chains:
    - filters:
      - name: envoy.filters.network.http_connection_manager
        typed_config:
          "@type": type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
          stat_prefix: ingress_http
          route_config:
            name: local_route
            virtual_hosts:
            - name: local_service
              domains: ["*"]
              routes:
              - match: { prefix: "/ipservice" }
                route: { cluster: ipservice }
              - match: { prefix: "/fileservice" }
                route: { cluster: fileservice }
          http_filters:
          - name: envoy.filters.http.router
  clusters:
  - name: ipservice
    connect_timeout: 0.25s
    type: STRICT_DNS
    lb_policy: ROUND_ROBIN
    load_assignment:
      cluster_name: ipservice
      endpoints:
      - lb_endpoints:
        - endpoint:
            address:
              socket_address:
                address: ipservice
                port_value: 80
  - name: fileservice
    connect_timeout: 0.25s
    type: STRICT_DNS
    lb_policy: ROUND_ROBIN
    load_assignment:
      cluster_name: fileservice
      endpoints:
      - lb_endpoints:
        - endpoint:
            address:
              socket_address:
                address: fileservice
                port_value: 80
admin:
  access_log_path: "/tmp/admin_access.log"
  address:
    socket_address: { address: 0.0.0.0, port_value: 8001 }
